--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelsam
 board = nano_33_iot
 framework = arduino
-lib_deps = arduino-libraries/WiFiNINA@^1.8.13
+lib_deps = 
+	arduino-libraries/WiFiNINA@^1.8.13
+	hideakitai/ArxTypeTraits@^0.2.3
