--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/WiFiNINA@^1.8.13
 	hideakitai/ArxTypeTraits@^0.2.3
+	paulstoffregen/Time@^1.6.1
